<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:layout_marginTop="5dp"
        android:theme="@style/TextLabel"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/gearpost_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_content"
            android:lines="6"
            android:gravity="top"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:maxLength="255"
            android:textColor="@color/white"
            />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/gearpost_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name"
                android:maxLength="10"
                android:textColor="@color/white"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/gearpost_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price"
                android:maxLength="6"
                android:textColor="@color/white"
                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/gearpost_contactphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phone"
                android:maxLength="10"
                android:textColor="@color/white"

                />
        </android.support.design.widget.TextInputLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/upload_layout"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_image_placeholder"
            android:layout_gravity="start|top"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_images"
            android:textColor="@color/white"
            android:layout_gravity="start|bottom"
            android:textSize="12sp"/>


    </LinearLayout>
    <Spinner
        android:id="@+id/cities_spinner"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textSize="15sp" />



</LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/upload_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/postdialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send_white"
            android:rotation="180"
            android:layout_gravity="center"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:textSize="15sp"/>

    </LinearLayout>





</LinearLayout>