<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:layout_margin="10dp"
        android:theme="@style/TextLabel"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forumpost_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_content"
            android:lines="6"
            android:gravity="top"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:maxLength="255"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/upload_layout"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_image_placeholder"
            android:layout_gravity="start|top"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_images"
            android:textColor="@color/white"
            android:layout_gravity="start|bottom"
            android:id="@+id/upload_label"
            android:textSize="12sp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/postdialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_margin="10dp"
        android:layout_gravity="end"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send_white"
            android:rotation="180"
            android:layout_gravity="center"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:textSize="15sp"/>

    </LinearLayout>





</LinearLayout>