<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:elevation="5dp"
        android:id="@+id/postdialog_close"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/close_dialog" />

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="15dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_white"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_label"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_subject"
                android:maxLength="20"
                android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel"

                >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_body_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_content"
                android:lines="6"
                android:gravity="top"
                android:textSize="15sp"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:textColor="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/postdialog_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_attach_white"
            android:layout_gravity="center"
            />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_image"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:textSize="12sp"/>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/attachment_preview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone"
            android:layout_marginStart="40dp"
            />
    </LinearLayout>

            <LinearLayout
                android:id="@+id/postdialog_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="15dp"
                android:layout_gravity="end|bottom"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_send_white"
                    android:rotation="180"
                    android:layout_gravity="center"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom"
                    android:textSize="15sp"/>

            </LinearLayout>



        </LinearLayout>



    </androidx.cardview.widget.CardView>




</RelativeLayout>