<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/bottom_nav_bg_color"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:elevation="5dp"
                android:id="@+id/closedialogbtn"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/close_dialog" />


            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/closedialogbtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:id="@+id/profile_pic_layout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/leash_launcher_round"
                    android:id="@+id/profilepicaroundme" />
                <ProgressBar
                    android:id="@+id/profilepic_progressbar_aroundme"
                    style="@android:style/Widget.Holo.Light.ProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:id="@+id/profile_online_indicator"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/circle_user_status"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_pic_layout"
                android:text="@string/display_name"
                android:textStyle="bold"
                android:id="@+id/displaynamearoundme"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/displaynamearoundme"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/dm_aroundme"
                    android:layout_margin="15dp"

                    android:src="@drawable/ic_dm"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="15dp"
                    android:id="@+id/shake_user"
                    android:src="@drawable/hand_shake" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/call_user"
                    android:layout_margin="15dp"

                    android:src="@drawable/ic_phone_white"
                    android:contentDescription="@string/send_email" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


